implementarea la admin